<resources>
    <string name="app_name">InternTestKumparan</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="comments">Comments</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="album">Album</string>
    <string name="photo">Photo</string>
</resources>