<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.user.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.048"
            app:srcCompat="@drawable/user" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_name"
            style="@style/Typography.Heading2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            tools:text="@string/name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_email_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_email"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_address_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/address"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_street_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/street"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_address_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_street"
            style="@style/Typography.Body2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_user_street_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_suite_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/suite"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_street" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_suite"
            style="@style/Typography.Body2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/suite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_user_suite_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_city_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/city"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_suite_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_city"
            style="@style/Typography.Body2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_user_city_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_zipcode_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/zipcode"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_city_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_zipcode"
            style="@style/Typography.Body2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/zipcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_user_zipcode_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_company_label"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/company"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_zipcode" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_company"
            style="@style/Typography.Body2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_company_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="86dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_album_section"
            style="@style/Typography.Heading2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_company" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_albums"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_album_section"
            tools:listitem="@layout/item_albums" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="488dp"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>